--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "hamburgers": "^1.1.3",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
